--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     display: flex;
 }
 
+.section_title{
+    font-size: 2.8rem;
+    font-weight: 800;
+}
+
 .bg_light{
     background-color: rgba(255, 144, 14, 0.1);
 }
@@ -26,6 +31,10 @@
     color: #727272;
 }
 
+.text_primary{
+    color: #FF900E;
+}
+
 .btn-primary{
     background-color: #FF900E;
     color: white;
@@ -33,6 +42,14 @@
     border: none;
     padding: 20px 25px;
     font-size: 1.25rem;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
 }
 
 /* Header Style */
@@ -82,6 +99,8 @@
     width: 100%;
 }
 
+
+
 /* respoinsive media query */
 
 @media screen and (max-width: 576px){
@@ -89,7 +108,61 @@
     width: 100%;
    }
    
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links, 
+    .teams{
         flex-direction: column ;
+    }
+}
+
+
+
+
+
+
+
+
+/* Team and features releted style */
+.teams{
+    align-items: center;
+}
+
+.team-image-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+
+}   
+
+.our-features{
+    margin-left: 130px; 
+    max-width: 530px;
+}
+
+.feature-title{
+    font-size: 2.8rem;
+}
+
+/* media query for team and features */
+@media screen and (max-width: 576px){
+    .our-features{
+        margin-left: 0;     
+    }
+
+    .team-image-container{
+        grid-template-columns: repeat(2, 1fr);
+       
+
+}  
+}
+
+/* Medium size device  */
+@media screen and (min-width: 576px) and (max-width: 996px){
+    .teams{
+        flex-direction: column;
+    }
+
+    .our-features{
+        margin: 50px auto;
     }
 }
